[package]
name = "panoptis-banks-client"
version = "1.6.19"
description = "Panoptis banks client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/panoptisdev/panoptis"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-banks-client"
edition = "2018"

[dependencies]
bincode = "1.3.1"
borsh = "0.9.0"
borsh-derive = "0.9.0"
futures = "0.3"
mio = "0.7.6"
panoptis-banks-interface = { path = "../banks-interface", version = "=1.6.19" }
panoptis-program = { path = "../sdk/program", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
tarpc = { version = "0.24.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }

[dev-dependencies]
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }
panoptis-banks-server = { path = "../banks-server", version = "=1.6.19" }

[lib]
crate-type = ["lib"]
name = "solana_banks_client"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
