[package]
name = "panoptis-banks-interface"
version = "1.6.19"
description = "Panoptis banks RPC interface"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/panoptisdev/panoptis"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-banks-interface"
edition = "2018"

[dependencies]
mio = "0.7.6"
serde = { version = "1.0.122", features = ["derive"] }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
tarpc = { version = "0.24.1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
