[package]
name = "panoptis-banks-server"
version = "1.6.19"
description = "Panoptis banks server"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/panoptis-banks-server"
edition = "2018"

[dependencies]
bincode = "1.3.1"
futures = "0.3"
log = "0.4.11"
mio = "0.7.6"
panoptis-banks-interface = { path = "../banks-interface", version = "=1.6.19" }
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-metrics = { path = "../metrics", version = "=1.6.19" }
tarpc = { version = "0.24.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "safecoin_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
