[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "panoptis-bench-streamer"
version = "1.6.19"
repository = "https://github.com/panoptisdev/panoptis"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
publish = false

[dependencies]
clap = "2.33.1"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-streamer = { path = "../streamer", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-net-utils = { path = "../net-utils", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
