[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "safecoin-bench-tps"
version = "1.6.16"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
publish = false

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
log = "0.4.11"
rayon = "1.5.0"
serde_json = "1.0.56"
serde_yaml = "0.8.13"
safecoin-clap-utils = { path = "../clap-utils", version = "=1.6.16" }
safecoin-core = { path = "../core", version = "=1.6.16" }
safecoin-genesis = { path = "../genesis", version = "=1.6.16" }
safecoin-client = { path = "../client", version = "=1.6.16" }
safecoin-faucet = { path = "../faucet", version = "=1.6.16" }
safecoin-logger = { path = "../logger", version = "=1.6.16" }
safecoin-metrics = { path = "../metrics", version = "=1.6.16" }
safecoin-measure = { path = "../measure", version = "=1.6.16" }
safecoin-net-utils = { path = "../net-utils", version = "=1.6.16" }
safecoin-runtime = { path = "../runtime", version = "=1.6.16" }
safecoin-sdk = { path = "../sdk", version = "=1.6.16" }
safecoin-version = { path = "../version", version = "=1.6.16" }

[dev-dependencies]
serial_test = "0.4.0"
solana-local-cluster = { path = "../local-cluster", version = "=1.6.16" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
