[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-cli"
description = "Panoptis: Enterprise Security for the Community by the Community"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-cli"

[dependencies]
bincode = "1.3.1"
bs58 = "0.3.1"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.1"
criterion-stats = "0.3.0"
ctrlc = { version = "3.1.5", features = ["termination"] }
console = "0.11.3"
const_format = "0.2.14"
dirs-next = "2.0.0"
log = "0.4.11"
Inflector = "0.11.4"
indicatif = "0.15.0"
humantime = "2.0.1"
num-traits = "0.2"
pretty-hex = "0.2.1"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = "1.0.122"
serde_derive = "1.0.103"
serde_json = "1.0.56"
panoptis-account-decoder = { path = "../account-decoder", version = "=1.6.19" }
panoptis-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.6.19" }
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-cli-config = { path = "../cli-config", version = "=1.6.19" }
panoptis-cli-output = { path = "../cli-output", version = "=1.6.19" }
panoptis-client = { path = "../client", version = "=1.6.19" }
panoptis-config-program = { path = "../programs/config", version = "=1.6.19" }
panoptis-faucet = { path = "../faucet", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-net-utils = { path = "../net-utils", version = "=1.6.19" }
solana_rbpf = "=0.2.9"
panoptis-remote-wallet = { path = "../remote-wallet", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }
panoptis-transaction-status = { path = "../transaction-status", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }
panoptis-vote-program = { path = "../programs/vote", version = "=1.6.19" }
safe-memo = { version = ">=3.0.4", features = ["no-entrypoint"] }
thiserror = "1.0.21"
tiny-bip39 = "0.7.0"
url = "2.1.1"

[dev-dependencies]
panoptis-core = { path = "../core", version = "=1.6.19" }
tempfile = "3.1.0"

[[bin]]
name = "safecoin"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
