[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "panoptis-dos"
version = "1.6.19"
repository = "https://github.com/panoptisdev/panoptis"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
publish = false

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-core = { path = "../core", version = "=1.6.19" }
panoptis-ledger = { path = "../ledger", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-net-utils = { path = "../net-utils", version = "=1.6.19" }
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }
panoptis-client = { path = "../client", version = "=1.6.19" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
