[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "panoptis-gossip"
description = "Panoptis: Enterprise Security for the Community by the Community"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/panoptis-gossip"

[dependencies]
clap = "2.33.1"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-core = { path = "../core", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-net-utils = { path = "../net-utils", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
