[package]
name = "panoptis-keygen"
version = "1.6.19"
description = "Panoptis key generation utility"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-keygen"
edition = "2018"

[dependencies]
bs58 = "0.3.1"
clap = "2.33"
dirs-next = "2.0.0"
num_cpus = "1.13.0"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-cli-config = { path = "../cli-config", version = "=1.6.19" }
panoptis-remote-wallet = { path = "../remote-wallet", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }
tiny-bip39 = "0.7.0"

[[bin]]
name = "panoptis-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
