[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-local-cluster"
description = "Panoptis: Enterprise Security for the Community by the Community"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/solana-local-cluster"

[dependencies]
crossbeam-channel = "0.4"
itertools = "0.9.0"
gag = "0.1.10"
fs_extra = "1.2.0"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
panoptis-config-program = { path = "../programs/config", version = "=1.6.19" }
panoptis-core = { path = "../core", version = "=1.6.19" }
panoptis-client = { path = "../client", version = "=1.6.19" }
panoptis-download-utils = { path = "../download-utils", version = "=1.6.19" }
panoptis-faucet = { path = "../faucet", version = "=1.6.19" }
panoptis-exchange-program = { path = "../programs/exchange", version = "=1.6.19" }
panoptis-ledger = { path = "../ledger", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }
panoptis-vest-program = { path = "../programs/vest", version = "=1.6.19" }
panoptis-vote-program = { path = "../programs/vote", version = "=1.6.19" }
tempfile = "3.1.0"
panoptis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.6.19" }

[dev-dependencies]
assert_matches = "1.3.0"
serial_test = "0.4.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
