[package]
name = "panoptis-logger"
version = "1.6.19"
description = "Panoptis Logger"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/panoptisdev/panoptis"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-logger"
edition = "2018"

[dependencies]
env_logger = "0.8.3"
lazy_static = "1.4.0"
log = "0.4.11"

[lib]
name = "solana_logger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
