[package]
name = "panoptis-measure"
description = "Panoptis: Enterprise Security for the Community by the Community"
version = "1.6.19"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/panoptis-measure"
readme = "../README.md"
repository = "https://github.com/fair-exchange/safecoin"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.11"
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-metrics = { path = "../metrics", version = "=1.6.19" }

[target."cfg(unix)".dependencies]
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.2"

[features]
# mainly for heaptrack, which seems to be incompatible with jemalloc
# opt-out ("no-" prefix) is chosen for convenience for the default case
# (= with jemalloc), considering complexies of proper opt-in (default)
# feature plumbing
no-jemalloc = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
