[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "panoptis-merkle-root-bench"
version = "1.6.19"
repository = "https://github.com/panoptisdev/panoptis"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
publish = false

[dependencies]
log = "0.4.11"
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }
panoptis-measure = { path = "../measure", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }
clap = "2.33.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
