[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "panoptis-net-shaper"
description = "The safecoin cluster network shaping tool"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
publish = false

[dependencies]
clap = "2.33.1"
serde = "1.0.122"
serde_json = "1.0.56"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
rand = "0.7.0"

[[bin]]
name = "panoptis-net-shaper"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
