[package]
name = "panoptis-net-utils"
version = "1.6.19"
description = "Panoptis Network Utilities"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-net-utils"
edition = "2018"

[dependencies]
bincode = "1.3.1"
clap = "2.33.1"
log = "0.4.11"
nix = "0.19.0"
rand = "0.7.0"
serde = "1.0.122"
serde_derive = "1.0.103"
socket2 = "0.3.17"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }
tokio = { version = "1", features = ["full"] }
url = "2.1.1"

[lib]
name = "solana_net_utils"

[[bin]]
name = "panoptis-ip-address"
path = "src/bin/ip_address.rs"

[[bin]]
name = "panoptis-ip-address-server"
path = "src/bin/ip_address_server.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
