[package]
name = "panoptis-perf"
version = "1.6.19"
description = "Panoptis Performance APIs"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/panoptisdev/panoptis"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-perf"
edition = "2018"

[dependencies]
rand = "0.7.0"
dlopen = "0.1.8"
bincode = "1.3.1"
rayon = "1.5.0"
serde = "1.0.122"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
log = "0.4.11"
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.6.19" }
panoptis-budget-program = { path = "../programs/budget", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-measure = { path = "../measure", version = "=1.6.19" }
panoptis-metrics = { path = "../metrics", version = "=1.6.19" }
curve25519-dalek = { version = "2" }

[lib]
name = "solana_perf"

[dev-dependencies]
matches = "0.1.6"

[[bench]]
name = "sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
