[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "safecoin-poh-bench"
version = "1.6.16"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/safecoin-poh-bench"

[dependencies]
clap = "2.33.1"
log = "0.4.11"
rand = "0.7.0"
rayon = "1.5.0"
safecoin-logger = { path = "../logger", version = "=1.6.16" }
solana-ledger = { path = "../ledger", version = "=1.6.16" }
safecoin-sdk = { path = "../sdk", version = "=1.6.16" }
safecoin-clap-utils = { path = "../clap-utils", version = "=1.6.16" }
safecoin-measure = { path = "../measure", version = "=1.6.16" }
safecoin-version = { path = "../version", version = "=1.6.16" }
safecoin-perf = { path = "../perf", version = "=1.6.16" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
