[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "Panoptis Program Test Framework"
edition = "2018"
license = "Apache-2.0"
name = "panoptis-program-test"
repository = "https://github.com/panoptisdev/panoptis"
version = "1.6.19"

[lib]
name = "solana_program_test"

[dependencies]
async-trait = "0.1.42"
base64 = "0.12.3"
bincode = "1.3.1"
chrono = "0.4.19"
chrono-humanize = "0.1.1"
log = "0.4.11"
mio = "0.7.6"
serde = "1.0.112"
serde_derive = "1.0.103"
panoptis-banks-client = { path = "../banks-client", version = "=1.6.19" }
panoptis-banks-server = { path = "../banks-server", version = "=1.6.19" }
panoptis-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-vote-program = { path = "../programs/vote", version = "=1.6.19" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_matches = "1.3.0"
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }
