[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "panoptis-ramp-tps"
description = "Panoptis Tour de PANO - TPS ramp up"
version = "1.6.19"
repository = "https://github.com/solana-labs/tour-de-sol"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/panoptis-ramp-tps"

[dependencies]
bzip2 = "0.3.3"
clap = "2.33.1"
log = "0.4.11"
reqwest = { version = "0.11.2", default-features = false }
serde = "1.0.122"
serde_json = "1.0.56"
serde_yaml = "0.8.13"
panoptis-core = { path = "../core", version = "=1.6.19" }
panoptis-client = { path = "../client", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-metrics = { path = "../metrics", version = "=1.6.19" }
panoptis-net-utils = { path = "../net-utils", version = "=1.6.19" }
panoptis-notifier = { path = "../notifier", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }
tar = "0.4.28"
