[package]
name = "panoptis-stake-accounts"
description = "Panoptis: Enterprise Security for the Community by the Community"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/panoptis-stake-accounts"

[dependencies]
clap = "2.33.1"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-cli-config = { path = "../cli-config", version = "=1.6.19" }
panoptis-client = { path = "../client", version = "=1.6.19" }
panoptis-remote-wallet = { path = "../remote-wallet", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }

[dev-dependencies]
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
