[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "panoptis-stake-monitor"
description = "Panoptis: Enterprise Security for the Community by the Community"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-stake-monitor"

[dependencies]
clap = "2.33.1"
console = "0.11.3"
log = "0.4.11"
serde = "1.0.122"
serde_yaml = "0.8.13"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-cli-config = { path = "../cli-config", version = "=1.6.19" }
panoptis-client = { path = "../client", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-metrics = { path = "../metrics", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }
panoptis-transaction-status = { path = "../transaction-status", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }

[dev-dependencies]
serial_test = "0.4.0"
solana-local-cluster = { path = "../local-cluster", version = "=1.6.19" }
panoptis-core = { path = "../core", version = "=1.6.19" }
tempfile = "3.1.0"

[[bin]]
name = "panoptis-stake-monitor"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
