[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "I will find you and I will stake you"
edition = "2018"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/"
license = "Apache-2.0"
name = "panoptis-stake-o-matic"
repository = "https://github.com/solana-labs/stake-o-matic"
version = "1.6.19"

[dependencies]
clap = "2.33.0"
log = "0.4.11"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "0.9.0"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.13"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-client = { path = "../client", version = "=1.6.19" }
panoptis-cli-config = { path = "../cli-config", version = "=1.6.19" }
panoptis-cli-output = { path = "../cli-output", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-metrics = { path = "../metrics", version = "=1.6.19" }
panoptis-notifier = { path = "../notifier", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }
panoptis-transaction-status = { path = "../transaction-status", version = "=1.6.19" }
thiserror = "1.0.21"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
