[package]
name = "panoptis-streamer"
version = "1.6.19"
description = "Panoptis Streamer"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/panoptisdev/panoptis"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-streamer"
edition = "2018"

[dependencies]
log = "0.4.11"
panoptis-metrics = { path = "../metrics", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
thiserror = "1.0"
panoptis-measure = { path = "../measure", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
libc = "0.2.81"
nix = "0.19.0"
panoptis-perf = { path = "../perf", version = "=1.6.19" }

[dev-dependencies]

[lib]
crate-type = ["lib"]
name = "solana_streamer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
