[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "panoptis-sys-tuner"
description = "The safecoin cluster system tuner daemon"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/panoptis-sys-tuner"
publish = true

[dependencies]
clap = "2.33.1"
log = "0.4.11"
libc = "0.2.81"
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }

[target."cfg(unix)".dependencies]
unix_socket2 = "0.5.4"
users = "0.10.0"
nix = "0.19.0"
sysctl = "0.4.0"

[lib]
name = "solana_sys_tuner"

[[bin]]
name = "panoptis-sys-tuner"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
