[package]
name = "panoptis-tokens"
description = "Panoptis: Enterprise Security for the Community by the Community"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
version = "1.6.19"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-tokens"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.0"
console = "0.11.3"
csv = "1.1.3"
ctrlc = { version = "3.1.5", features = ["termination"] }
dirs-next = "2.0.0"
indexmap = "1.5.1"
indicatif = "0.15.0"
pickledb = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
panoptis-account-decoder = { path = "../account-decoder", version = "=1.6.19" }
panoptis-clap-utils = { path = "../clap-utils", version = "=1.6.19" }
panoptis-cli-config = { path = "../cli-config", version = "=1.6.19" }
panoptis-client = { path = "../client", version = "=1.6.19" }
panoptis-remote-wallet = { path = "../remote-wallet", version = "=1.6.19" }
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }
panoptis-transaction-status = { path = "../transaction-status", version = "=1.6.19" }
panoptis-version = { path = "../version", version = "=1.6.19" }
safe-associated-token-account-v1-0 = { package = "safe-associated-token-account", version = ">=1.0.7" }
spl-token-v2-0 = { package = "pano-token", version = ">=3.1.6", features = ["no-entrypoint"] }
tempfile = "3.1.0"
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3.1"
panoptis-core = { path = "../core", version = "=1.6.19" }
panoptis-logger = { path = "../logger", version = "=1.6.19" }
panoptis-program-test = { path = "../program-test", version = "=1.6.19" }
