[package]
name = "panoptis-transaction-status"
version = "1.6.19"
description = "Panoptis transaction status types"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/panoptisdev/panoptis"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-transaction-status"
license = "Apache-2.0"
edition = "2018"

[dependencies]
base64 = "0.12.3"
bincode = "1.3.1"
bs58 = "0.3.1"
Inflector = "0.11.4"
lazy_static = "1.4.0"
serde = "1.0.122"
serde_derive = "1.0.103"
serde_json = "1.0.56"
panoptis-account-decoder = { path = "../account-decoder", version = "=1.6.19" }
panoptis-sdk = { path = "../sdk", version = "=1.6.19" }
panoptis-runtime = { path = "../runtime", version = "=1.6.19" }
panoptis-stake-program = { path = "../programs/stake", version = "=1.6.19" }
panoptis-vote-program = { path = "../programs/vote", version = "=1.6.19" }
safe-associated-token-account-v1-0 = { package = "safe-associated-token-account", version = ">=1.0.7", features = ["no-entrypoint"] }
safe-memo = { version = ">=3.0.4", features = ["no-entrypoint"] }
spl-token-v2-0 = { package = "pano-token", version = ">=3.1.6", features = ["no-entrypoint"] }
thiserror = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
