[package]
name = "panoptis-upload-perf"
version = "1.6.19"
description = "Metrics Upload Utility"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
edition = "2018"
homepage = "https://panoptis.network/"
publish = false

[dependencies]
serde_json = "1.0.56"
panoptis-metrics = { path = "../metrics", version = "=1.6.19" }

[[bin]]
name = "panoptis-upload-perf"
path = "src/upload-perf.rs"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
