[package]
name = "panoptis-frozen-abi-macro"
version = "1.6.19"
description = "Panoptis Frozen ABI Macro"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://panoptis.network/"
documentation = "https://docs.rs/panoptis-frozen-abi-macro"
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
lazy_static = "1.4.0"

[build-dependencies]
rustc_version = "0.2"
